<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassDetailsView">

    <TextView
        android:id="@+id/ClassInfo"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="140dp"
        android:text="@string/classInfoPageTitle"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ClassTitleBox"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/className" />

    <TextView
        android:id="@+id/ClassDescriptionBox"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classDesc" />

    <TextView
        android:id="@+id/startClassDateBox"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDate" />

    <TextView
        android:id="@+id/endClassDateBox"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginEnd="45dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDate" />

    <TextView
        android:id="@+id/daysOfWeekBox"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="3dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daysOfWeek" />

    <TextView
        android:id="@+id/ClassTimeBox"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classTime" />

    <TextView
        android:id="@+id/className"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="120dp"
        android:text="@string/displayName"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/classDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/displayDescription"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ClassTitleBox" />

    <TextView
        android:id="@+id/startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/displayStartDate"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ClassDescriptionBox" />

    <TextView
        android:id="@+id/endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:text="@string/displayEndDate"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ClassDescriptionBox" />

    <TextView
        android:id="@+id/daysOfWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/displayDays"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startClassDateBox" />

    <TextView
        android:id="@+id/classTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/displayTime"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daysOfWeekBox" />

    <Button
        android:id="@+id/DeleteButton"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#E90000"
        android:onClick="deleteButton"
        android:text="@string/deleteButtonText"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="25dp"
        android:onClick="cancelButton"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>