<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3C3C3C"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:layout_marginTop="50dp"
        android:focusedMonthDateColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:id="@+id/listTitles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calendarView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp">

        <TextView
            android:id="@+id/EventTextView"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/events"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ClassTextView"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/classes"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@+id/listTitles"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/NoEventsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/noEventsText"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/NoClassesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/noClassesText"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="invisible" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/listLayout"
        android:layout_width="match_parent"
        android:layout_height="326dp"
        android:layout_below="@+id/listTitles"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:baselineAligned="false">

        <ListView
            android:id="@+id/eventListView"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            tools:visibility="visible">

        </ListView>

        <ListView
            android:id="@+id/classListView"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

    </LinearLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="@dimen/fab_margin"
            android:backgroundTint="@color/colorPrimaryDark"
            android:src="@drawable/ic_school"
            android:visibility="invisible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/mainFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:backgroundTint="@color/colorPrimaryDark"
            android:src="@drawable/ic_add"
            android:tint="#FFEB3B"
            app:fabSize="normal" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="90dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:src="@drawable/ic_event"
            android:visibility="invisible" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</RelativeLayout>